--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^2.15.3",
     "nuxt-svg-sprite-loader": "^1.0.15",
     "sass-loader": "10",
+    "valine": "^1.4.14",
     "vditor": "^3.8.4",
     "vue-meditor": "^2.1.1"
   },
