--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/style-resources": "^1.0.0",
+    "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "element-ui": "^2.15.1",
     "fibers": "^5.0.0",
